--- a/index.html
+++ b/index.html
@@ -3,80 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progetto Gestionale Libri</title>
+    <title>Progetto con Navbar</title>
     <style>
         /* Stile di base */
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: rgb(0, 153, 156);
             color: #333;
             display: flex;
-            flex-direction: column;
+            justify-content: center;
             align-items: center;
             min-height: 100vh;
-            overflow-x: hidden;
+            flex-direction: column;
         }
-
-        /* Navbar */
         nav {
             display: flex;
             justify-content: center;
-            background-color: #1a1a1a;
+            background-color: #007BFF;
             width: 100%;
-            padding: 15px 0;
+            padding: 15px 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             position: fixed;
             top: 0;
             left: 0;
-            z-index: 1000;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 100;
             transition: background-color 0.3s ease;
         }
         nav a {
             color: white;
-            font-size: 18px;
+            padding: 14px 20px;
+            text-align: center;
             text-decoration: none;
-            padding: 12px 20px;
-            margin: 0 15px;
-            transition: color 0.3s ease;
+            font-size: 18px;
+            display: inline-block;
+            transition: background-color 0.3s ease;
         }
         nav a:hover {
-            color: #007BFF;
+            background-color: #0056b3;
         }
-
-        /* Sezione container principale */
         .container {
-            padding: 80px 20px;
-            max-width: 1200px;
-            width: 100%;
+            padding: 40px 20px;
+            max-width: 1000px;
+            margin-top: 100px;
+            margin-bottom: 40px;
+            width: 90%;
             text-align: center;
-            animation: fadeIn 1s ease-out;
         }
-
-        /* Titoli */
-        h1, h2 {
-            font-size: 3rem;
-            color: #333;
+        h2 {
+            font-size: 2rem;
+            color: #007BFF;
             margin-bottom: 20px;
             text-transform: uppercase;
         }
-
-        /* Carousel (Immagini) */
         .carousel {
             position: relative;
             width: 100%;
-            max-width: 900px;
+            max-width: 800px;
             margin: auto;
             overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-            transition: transform 0.5s ease;
+            border-radius: 10px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 1s ease-out;
+            transition: transform 0.5s ease-in-out;
         }
         .carousel img {
             width: 100%;
             display: block;
-            border-radius: 15px;
+            border-radius: 10px;
             transition: transform 0.5s ease;
         }
         .carousel img:hover {
@@ -89,38 +84,26 @@
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 24px;
-            padding: 10px 20px;
-            border-radius: 10px;
-            width: 90%;
-            text-align: center;
-        }
-
-        /* Frecce */
-        .arrow {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 30px;
-            color: #fff;
-            background-color: rgba(0, 0, 0, 0.5);
             padding: 10px;
-            border-radius: 50%;
+            font-size: 24px;
+            width: 80%;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: opacity 1s ease;
+        }
+        .carousel-btn {
+            background-color: #007BFF;
+            color: white;
+            padding: 12px 20px;
+            border: none;
             cursor: pointer;
-            z-index: 10;
+            border-radius: 5px;
+            margin-top: 20px;
             transition: background-color 0.3s ease;
         }
-        .arrow:hover {
-            background-color: rgba(0, 0, 0, 0.7);
+        .carousel-btn:hover {
+            background-color: #0056b3;
         }
-        .arrow-left {
-            left: 10px;
-        }
-        .arrow-right {
-            right: 10px;
-        }
-
-        /* Pulsanti */
         .download-btn, .submit-btn {
             padding: 12px 30px;
             background-color: #007BFF;
@@ -135,24 +118,24 @@
         .download-btn:hover, .submit-btn:hover {
             background-color: #0056b3;
         }
-
-        /* Form Container */
         .form-container {
             max-width: 600px;
             margin: auto;
             background-color: white;
             padding: 30px;
-            box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 8px #0056b3;
             border-radius: 10px;
+            transition: transform 0.5s ease-in-out;
         }
         .form-container input,
         .form-container textarea {
             width: 100%;
-            padding: 15px;
-            margin: 10px 0;
+            padding: 12px;
+            margin: 10px -10px;
             border-radius: 5px;
-            border: 1px solid #ccc;
+            border: 1px solid #0056b3;
             font-size: 16px;
+            transition: border 0.3s ease;
         }
         .form-container input:focus,
         .form-container textarea:focus {
@@ -170,82 +153,38 @@
             }
         }
 
-        /* Sezioni a scorrimento */
-        .section {
-            background-color: white;
-            padding: 50px 20px;
-            margin-bottom: 60px;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            position: relative;
-            animation: fadeIn 1s ease-out;
+        @keyframes fadeInText {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
-        /* Hover effect */
+        @keyframes slideIn {
+            from {
+                transform: translateX(-100%);
+            }
+            to {
+                transform: translateX(0);
+            }
+        }
+
+        /* Effetti di ombra per le sezioni */
+        .section {
+            background-color: white;
+            padding: 30px;
+            margin-bottom: 40px;
+            border-radius: 10px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
         .section:hover {
             transform: translateY(-10px);
         }
-
-        /* Sezione video */
-        iframe {
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            h1, h2 {
-                font-size: 2.5rem;
-            }
-
-            .carousel-text {
-                font-size: 18px;
-            }
-
-            .download-btn, .submit-btn {
-                padding: 10px 20px;
-            }
-
-            .form-container {
-                padding: 20px;
-            }
-
-            iframe {
-                width: 100%;
-                height: auto;
-            }
-
-            nav a {
-                font-size: 16px;
-                padding: 10px 15px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1, h2 {
-                font-size: 2rem;
-            }
-
-            .carousel-text {
-                font-size: 16px;
-            }
-
-            .download-btn, .submit-btn {
-                padding: 8px 20px;
-            }
-
-            nav a {
-                font-size: 14px;
-                padding: 8px 12px;
-            }
-
-            .form-container input,
-            .form-container textarea {
-                font-size: 14px;
-            }
-        }
-
     </style>
 </head>
 <body>
@@ -257,32 +196,31 @@
     <a href="#feedback">Feedback</a>
 </nav>
 
-<!-- Sezione di Presentazione -->
+
 <section class="container section">
-    <h1>Benvenuto nel Gestionale Libri</h1>
-    <p>Una soluzione semplice ed efficiente per gestire il tuo catalogo di libri.</p>
+
+
 </section>
 
-<!-- Sezione Presentazione Funzionamento -->
+
 <section class="container section">
-    <h2>Come Funziona</h2>
+    <h2>Presentazione funzionamento</h2>
     <div>
-        <iframe width="560" height="315" style="border-radius: 20px;" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=gDJA0dMvaxf9Up6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315"  style="border-radius: 20px;" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=gDJA0dMvaxf9Up6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </section>
 
 <!-- Sezione Immagini -->
 <section id="images" class="container section">
-    <h2>Immagini del Progetto</h2>
+    <h2>Immagini</h2>
     <div class="carousel">
         <img id="carousel-img" src="img1.jpg" alt="Immagine 1">
-        <div id="carousel-text" class="carousel-text">img1</div>
-        
-        <!-- Frecce per navigazione -->
-        <span class="arrow arrow-left" onclick="changeImage(-1)">&#10094;</span>
-        <span class="arrow arrow-right" onclick="changeImage(1)">&#10095;</span>
+        <div id="carousel-text" class="carousel-text">Descrizione immagine 1</div>
     </div>
+    <button class="carousel-btn" onclick="changeImage()">Cambia Immagine</button>
 </section>
+
+
 
 <!-- Sezione Scarica Progetto -->
 <section id="download" class="container section">
@@ -295,7 +233,7 @@
 
 <!-- Sezione Feedback -->
 <section id="feedback" class="container section">
-    <h2>Lascia il Tuo Feedback</h2>
+    <h2>Feedback</h2>
     <div class="form-container">
         <form action="feedback_process.php" method="POST">
             <label for="email">La tua Email:</label><br>
@@ -307,24 +245,25 @@
     </div>
 </section>
 
+
 <!-- Script per il carosello -->
 <script>
     let currentImageIndex = 0;
     const images = [
-        { src: 'img1.jpg', text: 'img1' },
-        { src: 'img2.jpg', text: 'img2' },
-        { src: 'img3.jpg', text: 'img3' },
-        { src: 'img4.jpg', text: 'img4' },
-        { src: 'img5.jpg', text: 'img5' },
-        { src: 'img6.jpg', text: 'img6' },
-        { src: 'img7.jpg', text: 'img7' },
-        { src: 'img8.jpg', text: 'img8' },
-        { src: 'img9.jpg', text: 'img9' },
-        { src: 'img10.jpg', text: 'img10' }
+        { src: 'img1.png', text: 'Descrizione immagine 1' },
+        { src: 'img2.png', text: 'Descrizione immagine 2' },
+        { src: 'img3.png', text: 'Descrizione immagine 3' },
+        { src: 'img4.png', text: 'Descrizione immagine 4' },
+        { src: 'img5.png', text: 'Descrizione immagine 5' },
+        { src: 'img6.png', text: 'Descrizione immagine 6' },
+        { src: 'img7.png', text: 'Descrizione immagine 7' },
+        { src: 'img8.png', text: 'Descrizione immagine 8' },
+        { src: 'img9.png', text: 'Descrizione immagine 9' },
+        { src: 'Img10.png', text: 'Descrizione immagine 10' }
     ];
 
-    function changeImage(direction) {
-        currentImageIndex = (currentImageIndex + direction + images.length) % images.length;
+    function changeImage() {
+        currentImageIndex = (currentImageIndex + 1) % images.length;
         document.getElementById('carousel-img').src = images[currentImageIndex].src;
         document.getElementById('carousel-text').textContent = images[currentImageIndex].text;
     }
