--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Progetto Gestionale Libri</title>
+    <title>BlueShelf</title>
     <style>
         /* Stile di base */
         body {
@@ -262,14 +262,14 @@
 <!-- Sezione di Presentazione -->
 <section class="container section">
     <h1>Benvenuto nel Gestionale Libri</h1>
-    <p>Una soluzione semplice ed efficiente per gestire il tuo catalogo di libri.</p>
+    <p>Il nostro Gestionale Libri offre un accesso sicuro tramite username e password, permettendoti di inserire libri con controllo automatico delle date. La ricerca è veloce e precisa, con filtri per titolo, autore, anno e genere. Inoltre, puoi modificare facilmente i libri grazie a un'interfaccia intuitiva e user-friendly.</p>
 </section>
 
 <!-- Sezione Presentazione Funzionamento -->
 <section class="container section">
     <h2>Come Funziona</h2>
     <div>
-        <iframe width="560" height="315" style="border-radius: 20px;" src="https://www.youtube.com/embed/vDMyIZ2nsS0?si=gDJA0dMvaxf9Up6s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="580" height="335" src="https://www.youtube.com/embed/k_5hGsUkB9E?si=Jyfi7Wx8YHYV0YmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </section>
 
