--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         /* Navbar */
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: space-between; /* Posiziona l'immagine a sinistra e i link centrati */
+            align-items: center;
             background-color: #1a1a1a;
             width: 100%;
-            padding: 15px 0;
+            padding: 15px 20px;
             position: fixed;
             top: 0;
             left: 0;
@@ -33,6 +34,19 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s ease;
         }
+
+        nav img {
+            width: 40px;  /* Dimensione logo */
+            height: 40px;
+            border-radius: 30%;
+        }
+
+        nav .menu {
+            display: flex;
+            justify-content: center;
+            flex-grow: 1; /* Aggiunge spazio tra logo e link */
+        }
+
         nav a {
             color: white;
             font-size: 18px;
@@ -41,6 +55,7 @@
             margin: 0 15px;
             transition: color 0.3s ease;
         }
+
         nav a:hover {
             color: #007BFF;
         }
@@ -67,22 +82,24 @@
             position: relative;
             width: 100%;
             max-width: 900px;
-            
             margin: auto;
             overflow: hidden;
             border-radius: 15px;
             box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.5s ease;
         }
+
         .carousel img {
             width: 100%;
             display: block;
             border-radius: 15px;
             transition: transform 0.5s ease;
         }
+
         .carousel img:hover {
             transform: scale(1.05);
         }
+
         .carousel-text {
             position: absolute;
             bottom: 20px;
@@ -111,12 +128,15 @@
             z-index: 10;
             transition: background-color 0.3s ease;
         }
+
         .arrow:hover {
             background-color: rgba(0, 0, 0, 0.7);
         }
+
         .arrow-left {
             left: 10px;
         }
+
         .arrow-right {
             right: 10px;
         }
@@ -133,6 +153,7 @@
             transition: background-color 0.3s ease;
             margin-top: 20px;
         }
+
         .download-btn:hover, .submit-btn:hover {
             background-color: #0056b3;
         }
@@ -146,6 +167,7 @@
             box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
+
         .form-container input,
         .form-container textarea {
             width: 100%;
@@ -155,6 +177,7 @@
             border: 1px solid #ccc;
             font-size: 16px;
         }
+
         .form-container input:focus,
         .form-container textarea:focus {
             border-color: #007BFF;
@@ -196,30 +219,39 @@
 
         /* Responsive Design */
         @media (max-width: 768px) {
-            h1, h2 {
-                font-size: 2.5rem;
+            nav {
+                flex-direction: column; /* Navbar diventa colonna */
+                align-items: center; /* Allinea gli elementi al centro */
             }
 
-            .carousel-text {
-                font-size: 18px;
+            nav img {
+                width: 30px;
+                height: 30px;
+                margin-bottom: 10px;
             }
 
-            .download-btn, .submit-btn {
-                padding: 10px 20px;
-            }
-
-            .form-container {
-                padding: 20px;
-            }
-
-            iframe {
-                width: 100%;
-                height: auto;
+            nav .menu {
+                display: flex;
+                flex-direction: column; /* I link saranno in colonna */
+                align-items: center;
             }
 
             nav a {
                 font-size: 16px;
                 padding: 10px 15px;
+                margin: 5px 0;
+            }
+
+            .container {
+                padding: 120px 20px 20px; /* Aggiusta il padding per il mobile */
+            }
+
+            .carousel {
+                max-width: 100%;
+            }
+
+            .form-container {
+                padding: 20px;
             }
         }
 
@@ -246,17 +278,18 @@
                 font-size: 14px;
             }
         }
-
     </style>
 </head>
 <body>
 
 <!-- Navbar -->
 <nav>
-    <img style=" width: 3%; height: 3%; border-radius: 10px; " src="logo.jpg">
-    <a href="#images">Immagini</a>
-    <a href="#download">Scarica Progetto</a>
-    <a href="#feedback">Feedback</a>
+    <img src="logo.jpg" alt="Logo">
+    <div class="menu">
+        <a href="#images">Immagini</a>
+        <a href="#download">Scarica Progetto</a>
+        <a href="#feedback">Feedback</a>
+    </div>
 </nav>
 
 <!-- Sezione di Presentazione -->
