--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
             nav {
                 flex-direction: column; /* Navbar diventa colonna */
                 align-items: center; /* Allinea gli elementi al centro */
+                text-align: center; /* Allinea i link al centro */
             }
 
             nav img {
