--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
 <!-- Sezione di Presentazione -->
 <section class="container section">
-    <h1>Benvenuto nel Gestionale Libri</h1>
+    <h1>BlueShelf</h1>
     <p>Il nostro Gestionale Libri offre un accesso sicuro tramite username e password, permettendoti di inserire libri con controllo automatico delle date. La ricerca è veloce e precisa, con filtri per titolo, autore, anno e genere. Inoltre, puoi modificare facilmente i libri grazie a un'interfaccia intuitiva e user-friendly.</p>
 </section>
 
@@ -321,7 +321,7 @@
 <section class="container section">
     <h2>Come Funziona</h2>
     <div>
-        <iframe width="580" height="335" src="https://www.youtube.com/embed/k_5hGsUkB9E?si=Jyfi7Wx8YHYV0YmQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="580" height="335" src="https://www.youtube.com/embed/ojZ9rYHSg88?si=72C1IAgvjUAkZj40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </section>
 
