--- a/index.html
+++ b/index.html
@@ -306,19 +306,22 @@
 <!-- Navbar -->
 <nav>
     <img style=" width: 3%; height: 3%; border-radius: 30%; " src="logo.jpg">
+    <a href="#home">Home</a>
+    <a href="#video">Video Guida</a>
     <a href="#images">Immagini</a>
+    <a href="#funzioni">Funzionalità</a>
     <a href="#download">Scarica Progetto</a>
     <a href="#feedback">Feedback</a>
 </nav>
 
 <!-- Sezione di Presentazione -->
-<section class="container section">
+<section id="home" class="container section">
     <h1>BlueShelf</h1>
     <p>Il nostro Gestionale Libri offre un accesso sicuro tramite username e password, permettendoti di inserire libri con controllo automatico delle date. La ricerca è veloce e precisa, con filtri per titolo, autore, anno e genere. Inoltre, puoi modificare facilmente i libri grazie a un'interfaccia intuitiva e user-friendly.</p>
 </section>
 
 <!-- Sezione Presentazione Funzionamento -->
-<section class="container section">
+<section id="video" class="container section">
     <h2>Come Funziona</h2>
     <div>
         <iframe width="580" height="335" src="https://www.youtube.com/embed/ojZ9rYHSg88?si=72C1IAgvjUAkZj40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -340,7 +343,7 @@
 
 <!--Tabella info-->
 
-<section id="tabella" class="container section">
+<section id="funzioni" class="container section">
     <div>
         <h1>Gestione Libreria</h1><br>
         <table>
@@ -440,7 +443,7 @@
 <p style="display: flex; flex-direction: column; align-items: center;" id="piede">
     <strong style="margin-bottom: 15px;">Maico Menozzi</strong>
     <strong style="margin-bottom: 15px;">menozzi.maico@einaudicorreggio.it</strong>
-    <strong style="margin-bottom: 15px;">Instagram: nome</strong>
+    <strong style="margin-bottom: 15px;">Instagram: <a href="https://www.instagram.com/blueshelfofficial?igsh=MTNmdDZwbHQ1NzVldA%3D%3D&utm_source=qr"  target="_blank">BlueShelf</a></strong>
 </p>
 
 
