--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         /* Navbar */
         nav {
+            overflow-x: auto;
             display: flex;
             justify-content: center;
             background-color: #1a1a1a;
