--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 <section id="download" class="container section">
     <h2>Scarica Progetto</h2>
     <p>Scarica il progetto completo cliccando sul bottone qui sotto:</p>
-    <a href="ProgettoGui19_03_2025_IlPiuNuovo.zip" download>
+    <a href="javaProgettoDaEsporre.zip" download>
         <button class="download-btn">Scarica</button>
     </a>
 </section>
